2005-10-02  Andy Wingo  <wingo@pobox.com>

	* gst-libs/gst/audio/gstringbuffer.c (gst_ring_buffer_clear) 
	(gst_ring_buffer_prepare_read): 
	* gst-libs/gst/audio/gstaudiosink.c (audioringbuffer_thread_func):
	Demote to LOG.

2005-09-29  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_chain_peer):
	* ext/theora/theoradec.c: (theora_handle_data_packet):
	* ext/vorbis/vorbisdec.c: (vorbis_handle_data_packet):
	Propagate error codes from alloc_buffer too.

2005-09-29  Wim Taymans  <wim@fluendo.com>

	* ext/vorbis/vorbisdec.c: (gst_vorbis_dec_init):
	We use fixed caps.

	* gst/playback/Makefile.am:
	* gst/playback/test5.c: (new_pad), (no_more_pads), (start_finding),
	(dump_element_stats), (main):
	Added example stream introspection code.

2005-09-28  Stefan Kost  <ensonic@users.sf.net>

	* gst/adder/gstadder.c: (gst_adder_collected):
          fix adder for float elements

2005-09-28  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_class_init),
	(gst_base_audio_sink_provide_clock), (gst_base_audio_sink_render):
	* gst-libs/gst/audio/gstbaseaudiosrc.c:
	(gst_base_audio_src_class_init),
	(gst_base_audio_src_provide_clock):
	get_clock -> provide_clock

2005-09-28  Andy Wingo  <wingo@pobox.com>

	* gst/videotestsrc/gstvideotestsrc.c: Implement live source mode
	and unlocking.

	* gst/sine/gstsinesrc.c (gst_sinesrc_unlock): Actually implement
	unlocking.

	* gst/tcp/gsttcpclientsink.c (gst_tcpclientsink_base_init):
	Actually add the pad template.
	(gst_tcpclientsink_get_type): We're a base sink. Woot, works.

	* gst/tcp/gsttcpserversrc.c: Go ahead and fix up serversrc while
	I'm at it...

	* gst/tcp/gsttcpclientsrc.c: Make interruptable -- code stolen
	from fdsrc. Get caps in create() instead of start() so it can be
	interrupted. Interruption somewhat untested.

	* gst/tcp/gsttcp.c (gst_tcp_read_buffer, gst_tcp_socket_read):
	Proper EOS handling.

2005-09-27  Andy Wingo  <wingo@pobox.com>
